@@ -17,15 +17,15 @@
 #########################################################################
 
 
-Autoloader::registerInternalClass(
+InternalAutoloader::getInstance()->registerClass(
 	'AutoloaderIndex_SerializedHashtable',
     dirname(__FILE__).'/AutoloaderIndex_SerializedHashtable.php'
 );
-Autoloader::registerInternalClass(
+InternalAutoloader::getInstance()->registerClass(
     'AutoloaderException_Index_IO',
     dirname(__FILE__).'/exception/AutoloaderException_Index_IO.php'
 );
-Autoloader::registerInternalClass(
+InternalAutoloader::getInstance()->registerClass(
     'AutoloaderException_Index_IO_FileNotExists',
     dirname(__FILE__).'/exception/AutoloaderException_Index_IO_FileNotExists.php'
 );
