@@ -17,7 +17,7 @@
 #########################################################################
 
 
-Autoloader::registerInternalClass(
+InternalAutoloader::getInstance()->registerClass(
 	'AutoloaderException',
 	dirname(__FILE__).'/../../exception/AutoloaderException.php'
 );
